# determining-article-topic

./: .dvcignore  .gitignore  .pre-commit-config.yaml  README.md  article_parser.py  config.py  docker-compose.yml  eda.ipynb  experiments.ipynb  main.ipynb  main.py  private.py  pyproject.toml  requirements.txt  tg_bot.py
.dvc/: config
EDA/: EDA_Kondrashov.ipynb  EDA_Rubin.ipynb  EDA_Sergeev.ipynb
app/: Dockerfile  config.py  preprocessing.py  requirements.txt  tg_bot.py
data/: df_test.parquet.dvc  df_train.parquet.dvc  df_val.parquet.dvc  id2hub.pkl.dvc  tfidf_vectorizer.pkl.dvc
parser/: main.py
service/: Dockerfile  docker-compose.yml  model_class.py  requirements.txt  server.py
tests/: .coverage  test_input_real.txt  test_tg_bot.py  testing_service.py
tests/.pytest_cache/v/cache/: nodeids
tests/htmlcov/: __init___py.html  d_a3d212948b92bf30___init___py.html  d_a3d212948b92bf30_config_py.html  d_a3d212948b92bf30_model_class_py.html  d_a3d212948b92bf30_preprocessing_py.html  d_a3d212948b92bf30_private_py.html  d_a3d212948b92bf30_tg_bot_py.html  index.html  status.json  test_tg_bot_py.html
