[tool.poetry]
name = "determining-article-topic"
version = "0.1.0"
description = ""
authors = ["Daniil Rubin <danyarubin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.9.2"
jupyter = "^1.0.0"
boto3 = "^1.34.16"
pymorphy2 = "^0.9.1"
pandarallel = "^1.6.5"
torch = "^2.1.2"
tqdm = "^4.66.1"
nltk = "^3.8.1"
requests = "^2.31.0"
html5lib = "^1.1"
bs4 = "^0.0.1"
pandas = "^2.1.4"
numpy = "^1.26.3"
scikit-learn = "^1.3.2"
python-telegram-bot = "^20.7"
fastparquet = "^2023.10.1"
dvc = "^3.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
