[tool.poetry]
name = "determining-article-topic"
version = "0.1.0"
description = ""
authors = ["FK_z11 <rjcnz735@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.32.3"
html5lib = "1.1"
bs4 = "0.0.2"
boto3 = "1.34.127"
pandas = "2.2.2"
numpy = "1.26.4"
torch = "2.3.1"
scikit-learn = "1.3.2"
python-telegram-bot = "21.3"
pymorphy2 = "0.9.1"
pytest = "8.2.2"
pytest-asyncio = "0.23.7"
coverage = "7.5.3"
flake8 = "7.1.0"
fasttext-wheel = "0.9.2"
mlflow = "2.13.2"
gensim = "4.3.2"
uvicorn = "0.30.1"
fastapi = "0.111.0"
aioredis = "2.0.1"
python-multipart = "0.0.9"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
